@@ -5,7 +5,6 @@ import static org.hamcrest.collection.IsMapContaining.hasEntry;
 import static org.hamcrest.collection.IsMapWithSize.aMapWithSize;
 import static org.hamcrest.collection.IsMapWithSize.anEmptyMap;
 
-import com.google.common.collect.ImmutableMap;
 import java.net.URI;
 import java.util.HashMap;
 import java.util.Map;
@@ -76,7 +75,7 @@ public class XattrsTest {
 
     @Test
     public void testMapXattrEmpty() {
-        Map<String, String> params = new HashMap<>();
+        Map<String, String[]> params = new HashMap<>();
 
         Map<String, String> xattrs = Xattrs.from(params);
         assertThat(xattrs, anEmptyMap());
@@ -84,8 +83,8 @@ public class XattrsTest {
 
     @Test
     public void testMapXattrSingleValue() {
-        Map<String, String> params = ImmutableMap.of(
-              "xattr.key1", "value1"
+        Map<String, String[]> params = Map.of(
+              "xattr.key1", new String[]{"value1"}
         );
 
         Map<String, String> xattrs = Xattrs.from(params);
@@ -95,9 +94,9 @@ public class XattrsTest {
 
     @Test
     public void testMapXattrMutipleValue() {
-        Map<String, String> params = ImmutableMap.of(
-              "xattr.key1", "value1",
-              "xattr.key2", "value2"
+        Map<String, String[]> params = Map.of(
+              "xattr.key1", new String[] {"value1"},
+              "xattr.key2", new String[] {"value2"}
         );
 
         Map<String, String> xattrs = Xattrs.from(params);
@@ -108,9 +107,20 @@ public class XattrsTest {
 
     @Test
     public void testMapXattrIgnoreOthers() {
-        Map<String, String> params = ImmutableMap.of(
-              "xattr.key1", "value1",
-              "key2", "value2"
+        Map<String, String[]> params = Map.of(
+              "xattr.key1", new String[] {"value1"},
+              "key2", new String[] {"value2"}
+        );
+
+        Map<String, String> xattrs = Xattrs.from(params);
+        assertThat(xattrs, aMapWithSize(1));
+        assertThat(xattrs, hasEntry("key1", "value1"));
+    }
+
+    @Test
+    public void testMapXattrFirstValueWins() {
+        Map<String, String[]> params = Map.of(
+              "xattr.key1", new String[] {"value1", "value2"}
         );
 
         Map<String, String> xattrs = Xattrs.from(params);
@@ -120,6 +130,6 @@ public class XattrsTest {
 
     @Test(expected = NullPointerException.class)
     public void testMapXattrNullArg() {
-        Xattrs.from((Map<String, String>) null);
+        Xattrs.from((Map<String, String[]>) null);
     }
 }
